# openalgo

./: .gitignore  .sample.env  pyproject.toml  requirements-nginx.txt  requirements.txt
blueprints/: brlogin.py
broker/fyers/api/: auth_api.py  data.py
database/: analyzer_db.py  apilog_db.py  auth_db.py  chartink_db.py  latency_db.py  settings_db.py  strategy_db.py  symbol.py  traffic_db.py  user_db.py
install/: setup_postgres.sh
nse_scripts/: README.md  fetch_active_stocks.py  fetch_index_constituents.py
restx_api/: __init__.py  data_schemas.py  intraday_margin.py
services/: intraday_margin_service.py
system/: broker_simulator.py  config.yaml  db.py  db_cleanup.py  driver.py  flowchart.md  fyers_utils.py  logger.py  risk_manager.py  run.py  socket_simulator.py  strategy_manager.py  trade_manager.py  utils.py  worker.py
system/backtester/: backtest.py  backtest_config.yaml  cost_calculator.py  data_provider.py
templates/: broker.html
test/: test_api_concurrency.py  test_margin_api.py
