[project]
requires-python = ">=3.12"
name = "openalgoUI"
version = "1.0.0.25"
description = "Broker-agnostic open-source trading automation"
dependencies = [
  "annotated-types==0.7.0",
  "aniso8601==9.0.1",
  "anyio==4.8.0",
  "APScheduler==3.11.0",
  "argon2-cffi==23.1.0",
  "argon2-cffi-bindings==21.2.0",
  "asttokens==3.0.0",
  "asyncio>=3.4.3",
  "attrs==24.2.0",
  "backtesting>=0.6.4",
  "bcrypt>=4.0.1",
  "bidict==0.23.1",
  "blinker==1.8.2",
  "cachetools==5.3.3",
  "certifi==2024.7.4",
  "cffi==1.17.1",
  "charset-normalizer==3.3.2",
  "click==8.1.7",
  "colorama==0.4.6",
  "comm==0.2.2",
  "cryptography>=41.0.0",
  "darkdetect==0.8.0",
  "debugpy==1.8.13",
  "decorator==5.2.1",
  "Deprecated==1.2.14",
  "dnspython==2.6.1",
  "duckdb==1.2.2",
  "email-validator==2.1.1",
  "eventlet>=0.33.3",
  "executing==2.2.0",
  "flask>=3.0.3",
  "Flask-Bcrypt==1.0.1",
  "Flask-Cors==6.0.0",
  "Flask-Limiter==3.7.0",
  "flask-login>=0.6.2",
  "flask-restx==1.3.0",
  "flask-socketio>=5.3.6",
  "Flask-SQLAlchemy==3.1.1",
  "Flask-WTF==1.2.1",
  "fyers-apiv3",
  "greenlet==3.1.1",
  "gunicorn>=23.0.0",
  "h11==0.14.0",
  "h2==4.1.0",
  "holidays>=0.73",
  "hpack==4.1.0",
  "httpcore==1.0.7",
  "httpx[http2]>=0.28.1",
  "hyper>=0.5.0",
  "hypercorn>=0.17.3",
  "httpx-sse==0.4.1",
  "hyperframe==6.1.0",
  "idna==3.7",
  "importlib-resources==6.4.0",
  "ipykernel==6.29.5",
  "ipython==9.0.2",
  "ipython-pygments-lexers==1.1.1",
  "itsdangerous==2.2.0",
  "jedi==0.19.2",
  "Jinja2==3.1.6",
  "jsonschema==4.23.0",
  "jsonschema-specifications==2023.12.1",
  "jupyter-client==8.6.3",
  "jupyter-core==5.8.1",
  "limits==3.13.0",
  "logzero==1.7.0",
  "markdown-it-py==3.0.0",
  "MarkupSafe==2.1.5",
  "marshmallow==3.22.0",
  "matplotlib>=3.10.3",
  "matplotlib-inline==0.1.7",
  "mcp==1.11.0",
  "mdurl==0.1.2",
  "nest-asyncio==1.6.0",
  "numpy==2.2.4",
  # "openalgo>=1.0.21",  # Temporarily commented due to websocket-client conflict
  "openpyxl>=3.1.5",
  "ordered-set==4.1.0",
  "packaging==24.1",
  "pandas==2.2.3",
  "pandas-ta==0.3.14b0",
  "parso==0.8.4",
  "pillow==11.0.0",
  "platformdirs==4.3.7",
  "plotly>=6.1.2",
  "prompt-toolkit==3.0.50",
  "protobuf==6.31.1",
  "psutil>=7.0.0",
  "psycopg2>=2.9.10",
  "psycopg2-binary>=2.9.10",
  "pure-eval==0.2.3",
  "pycparser==2.22",
  "pydantic==2.11.7",
  "pydantic-core==2.33.2",
  "pydantic-settings==2.10.1",
  "Pygments==2.18.0",
  "PyJWT==2.8.0",
  "pyngrok==7.1.6",
  "pyotp==2.9.0",
  "python-dateutil==2.9.0.post0",
  "python-dotenv==1.0.1",
  "python-engineio==4.9.1",
  "python-socketio==5.11.3",
  "python-multipart==0.0.20",
  "python-jose>=3.3.0",
  "python-socketio>=5.11.3",
  "pytz==2024.1",
  "pyyaml>=6.0.1",
  "pyzmq==26.3.0",
  "qrcode==8.0",
  "referencing==0.35.1",
  "requests==2.31.0",
  "requests-toolbelt>=1.0.0",
  "rich==13.7.1",
  "rpds-py==0.20.0",
  "ruff>=0.11.12",
  "scikit-learn>=1.7.0",
  "scipy>=1.15.3",
  "seaborn>=0.13.2",
  "setuptools==80.3.1",
  "simple-websocket==1.0.0",
  "six==1.16.0",
  "sniffio==1.3.1",
  "sse-starlette==2.4.1",
  "starlette==0.47.1",
  "sqlalchemy==2.0.31",
  "stack-data==0.6.3",
  "ta-lib>=0.6.3",
  "tabulate>=0.9.0",
  "tornado==6.5.0",
  "tqdm>=4.67.1",
  "traitlets==5.14.3",
  "typing-extensions==4.12.2",
  "typing-inspection==0.4.1",
  "tzdata==2024.1",
  "tzlocal==5.2",
  "urllib3==2.5.0",
  "uvicorn==0.35.0",
  "wcwidth==0.2.13",
  "webauthn>=1.11.0",
  "websockets==15.0.1",
  "Werkzeug==3.1.2",
  "wheel==0.43.0",
  "wrapt==1.16.0",
  "wsproto==1.2.0",
  "WTForms==3.1.2",
  "yfinance>=0.2.61",
  "zipp==3.19.2",
  "zmq==0.0.0",
  "pendulum>=3.1.0",
  "mibian>=0.1.3",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"
